Got the geolocation of where the user made a post in incorporate_post. The map now displays the posts around the map using their geolocations. Fixed the errorwith the profile page not showing the articles seen and the articles posted.

--- a/styles/style.css
+++ b/styles/style.css
@@ -86,7 +86,6 @@
   font-size: 10pt;
 }
 
-/*
-#sticky {
-  text-align: center;
+#map {
+  margin: auto;
 }
